--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'QD'
 - !lcsh 'Chemistry'
+- GITenberg
 title: An Elementary Study of Chemistry
 url: http://www.gutenberg.org/ebooks/20848
